# propamm-router-contracts

./: .env.example  .gitignore  .gitmodules  .tool-versions  README.md  foundry.toml  gas_flamegraph.py  gas_flamegraph.sh
.github/workflows/: ci.yml  docs-deploy.yml  publish.yml  test.yml
docs/: access-manager.md  gas_report.md  rationale.md  safe-operations.md
scripts/: Deploy.s.sol  DeployFeeWrapper.s.sol  Execute.s.sol  README.md  SeedStablePairs.s.sol  Upgrade.s.sol  detect_propamm.sh  execute_direct_swaps.sh  execute_swaps.sh  run_fork_tests.sh  run_wrapper_pamm_gas.sh  setupRouterVariables.s.sol
scripts/gas/: DirectSwap.sol  direct_sim.py  router_gas_compare.py  router_overhead.py  uniswap_sim.py
scripts/kyberswap/: quote_sweep.py
sdk/docs/: .gitignore  book.toml  package.json  pnpm-lock.yaml  vocs.config.ts
sdk/docs/.vitepress/: config.ts
sdk/docs/.vitepress/theme/: custom.css
sdk/docs/docs/pages/: index.mdx
sdk/docs/docs/pages/rust/: helpers.mdx  types.mdx
sdk/docs/docs/pages/rust/overrides/: rpc-source.mdx  utilities.mdx  ws-source.mdx
sdk/docs/docs/pages/rust/router/: allowance.mdx  approve.mdx  frontend_fee.mdx  quote.mdx  quote_selected_venues.mdx  quote_uniswap_v3.mdx  quote_venue.mdx  swap.mdx  swap_via_selected_venues.mdx  swap_via_selected_venues_with_fee.mdx  swap_via_venue.mdx  swap_via_venue_with_fee.mdx  swap_with_fee.mdx  views.mdx  wait_for_swap.mdx
sdk/docs/docs/pages/typescript/: getting-started.mdx  helpers.mdx  types.mdx
sdk/docs/docs/pages/typescript/overrides/: rpc-source.mdx  utilities.mdx  ws-source.mdx
sdk/docs/docs/pages/typescript/router/: allowance.mdx  approve.mdx  frontendFee.mdx  quote.mdx  quoteSelectedVenues.mdx  quoteUniswapV3.mdx  quoteVenue.mdx  swap.mdx  swapViaSelectedVenues.mdx  swapViaSelectedVenuesWithFee.mdx  swapViaVenue.mdx  swapViaVenueWithFee.mdx  swapWithFee.mdx  views.mdx  waitForSwap.mdx
sdk/docs/src/: SUMMARY.md  introduction.md  pages.gen.ts
sdk/docs/src/concepts/: state-overrides.md
sdk/docs/src/pages/: index.md  index.mdx
sdk/docs/src/pages/propamms/: index.mdx  makers.mdx  router.md  takers.md
sdk/docs/src/pages/python/: changelog.md  getting-started.md  helpers.md  installation.md  types.md
sdk/docs/src/pages/python/overrides/: rpc-source.md  utilities.md  ws-source.md
sdk/docs/src/pages/rust/: changelog.md  getting-started.md  helpers.md  helpers.mdx  installation.md  installation.mdx  types.md  types.mdx
sdk/docs/src/pages/typescript/: changelog.md  getting-started.md  helpers.md  helpers.mdx  installation.md  installation.mdx  types.md
sdk/docs/src/rust/: getting-started.md  quotes.md  reference.md  swaps.md
sdk/docs/src/typescript/: getting-started.md  quotes.md  reference.md  swaps.md
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/examples/: getting_started.py  price_levels.py
sdk/python/src/propamm/: __init__.py  _tls.py  client.py  error.py
sdk/python/src/propamm/common/: __init__.py  accounts.py  pamms.py
sdk/python/src/propamm/overrides/: __init__.py
sdk/python/src/propamm/prices/: __init__.py
sdk/python/src/propamm/router/: __init__.py  abi.py  bindings.py  propamm_router_abi.json
sdk/python/src/propamm_sdk/: __init__.py  client.py  error.py
sdk/python/src/propamm_sdk/common/: helpers.py  pamms.py  tokens.py
sdk/python/src/propamm_sdk/overrides/: __init__.py
sdk/python/src/propamm_sdk/router/: abi.py  bindings.py
sdk/python/tests/: test_abi.py  test_contract_parity.py  test_helpers.py  test_overrides.py  test_prices.py
sdk/rust/: CHANGELOG.md  Cargo.toml  README.md
sdk/rust/examples/: getting_started.rs  price_levels.rs  stop_loss_bot.rs
sdk/rust/src/: client.rs  convert.rs  error.rs  lib.rs  ws.rs
sdk/rust/src/common/: helpers.rs  mod.rs  pamms.rs  tokens.rs
sdk/rust/src/overrides/: mod.rs
sdk/rust/src/prices/: mod.rs
sdk/rust/src/router/: abi.rs  mod.rs
sdk/typescript/: CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
sdk/typescript/examples/: estimate-gas.ts  getting-started.ts  price-feed.ts  price-levels.ts  quotes.ts
sdk/typescript/src/: client.ts  index.ts  ws-source.ts
sdk/typescript/src/api/: http.ts
sdk/typescript/src/common/: accounts.ts  chains.ts  helpers.ts  pamms.ts  tokens.ts
sdk/typescript/src/contract/: client.ts
sdk/typescript/src/overrides/: index.ts
sdk/typescript/src/prices/: index.ts
sdk/typescript/src/router/: abi.ts  index.ts
src/: BlitzRouter.sol  PropAMMFeeWrapper.sol  PropAMMRouter.sol  PropAMMRouterWithFee.sol  RouterAccessManager.sol
src/adapters/: BebopAdapter.sol  FermiAdapter.sol  KipseliAdapter.sol
src/interfaces/: IBebopRouter.sol  IBlitzRouter.sol  IFermiSwapper.sol  IKipseliPAMM.sol  IKipseliQuoter.sol  IPrioUpdateRegistry.sol  IPropAMM.sol  IPropAMMExactOut.sol  IPropAMMRouter.sol  IUniswapV3Pool.sol  IWETH.sol
src/libraries/: Constants.sol  Errors.sol  Events.sol  FrontendFees.sol  UniV3Adapter.sol  UniV3Router.sol
test/: Base.t.sol  BlitzRouterFee.t.sol  BlitzRouterPairFee.t.sol  BlitzRouterVenueWhitelist.t.sol  IPropAMMExactOut.t.sol  Integration.t.sol  Migration.t.sol  PropAMMFeeWrapper.fork.t.sol  PropAMMFeeWrapper.forkgas.t.sol  PropAMMFeeWrapper.gas.t.sol  PropAMMFeeWrapper.pammgas.t.sol  PropAMMFeeWrapper.t.sol  PropAMMRouterCallback.t.sol  PropAMMRouterEth.t.sol  PropAMMRouterFee.t.sol  PropAMMRouterFermi.t.sol  PropAMMRouterForkTests.t.sol  PropAMMRouterPairFee.t.sol  PropAMMRouterRouting.t.sol  PropAMMRouterVenueWhitelist.t.sol  PropAMMRouterWhitelist.t.sol  SwapFork.t.sol  UpgradeConfigFork.t.sol
test/adapters/: BebopAdapter.t.sol  FermiAdapter.t.sol  KipseliAdapter.t.sol
test/helpers/: UniV3PoolFixture.sol
test/interfaces/: IPrioUpdateRegistry.sol
test/mocks/: MockBebop.sol  MockERC20.sol  MockFeeOnTransferERC20.sol  MockFermi.sol  MockPropAMM.sol  MockPropAMMExactOut.sol  MockPropAMMRouter.sol  MockQuoterV2.sol  MockSwapRouter02.sol  MockUniV3Pool.sol  MockUniswap.sol  MockV3SwapRouter.sol  MockVenues.sol  MockWETH.sol  PropAMMFeeWrapperV2.sol  TestERC20.sol
(+61 files in other folders)
