[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propamm-sdk"
version = "0.1.0"
description = "Python SDK for interacting with the PropAMM contracts"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "web3==7.16.0",
    "eth-abi==5.2.0",
    "eth-utils==6.0.0",
    "eth-account==0.13.7",
    "aiohttp==3.14.1",
    "websockets==15.0.1",
    "certifi==2026.5.20",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/propamm_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "examples", "tests"]
