[package]
name = "propamm"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for interacting with the PropAMM contracts"
license = "MIT"

[dependencies]
# Transport: rex / ethrex (git deps; ethrex pinned to the tag rex uses).
# rex pinned to main at the eth_call overrides merge (#232) — repoint to a tag
# once one is cut.
rex-sdk = { git = "https://github.com/lambdaclass/rex", rev = "389401b0c2e3684e1e9708ec9e9f7901be83d638" }
ethrex-common = { git = "https://github.com/lambdaclass/ethrex", tag = "v9.0.0" }
ethrex-rpc = { git = "https://github.com/lambdaclass/ethrex", tag = "v9.0.0" }
ethrex-sdk = { git = "https://github.com/lambdaclass/ethrex", tag = "v9.0.0" }
ethrex-l2-rpc = { git = "https://github.com/lambdaclass/ethrex", tag = "v9.0.0" }
ethrex-l2-common = { git = "https://github.com/lambdaclass/ethrex", tag = "v9.0.0" }
secp256k1 = "0.30"

async-trait = "0.1.89"
futures-util = "0.3.32"
hex = "0.4.3"
hex-literal = "0.4.1"
keccak-hash = "0.11.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
