[package]
name = "propamm"
version = "1.1.2"
edition = "2024"
description = "Rust SDK for the PropAMM Router contract: typed calls, eth_call overrides, and ABI codec over JSON-RPC"
license = "MIT"
repository = "https://github.com/lambdaclass/propamm-router-contracts"
documentation = "https://docs.rs/propamm"
readme = "README.md"
keywords = ["ethereum", "amm", "defi", "propamm", "ethrex"]
categories = ["cryptography::cryptocurrencies", "api-bindings", "finance"]

[dependencies]
# Transport: rex / ethrex (crates.io)
rex-sdk = "17.0.0"
ethrex-common = "17.0.0"
ethrex-rpc = "17.0.0"
ethrex-sdk = "17.0.0"
ethrex-l2-rpc = "17.0.0"
ethrex-l2-common = "17.0.0"
secp256k1 = "0.30"

async-trait = "0.1.89"
futures-util = "0.3.32"
hex = "0.4.3"
hex-literal = "0.4.1"
keccak-hash = "0.11.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
